force-app/main/default/objects/Visa__c/Visa__c.object-meta.xml
<CustomObject>
    <label>Visa</label>
    <nameField>
        <label>Visa/Courier Component</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>