force-app/main/default/objects/Visa__c/fields/Consulate_Fees__c.field-meta.xml
<CustomField>
    <fullName>Consulate_Fees__c</fullName>
    <label>Consulate Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>