force-app/main/default/objects/Visa__c/fields/Courier_Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Courier_Service_Price__c</fullName>
    <label>Courier Service Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>