force-app/main/default/objects/Visa__c/fields/VD_Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>VD_Processing_Fee__c</fullName>
    <label>VD Processing Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>