force-app/main/default/objects/Visa__c/fields/Visa_Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Visa_Service_Price__c</fullName>
    <label>Visa Service Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>