force-app/main/default/objects/Visa__c/recordTypes/Visa_Type.recordType-meta.xml
<RecordType>
    <fullName>Visa_Type</fullName>
    <active>true</active>
    <label>Visa Type</label>
</RecordType>